[project]
name = "comfyui-centernode"
description = "This extension contains a custom node for ComfyUI. The node, called 'Bounding Box Crop', is designed to compute the top-left coordinates of a cropped bounding box based on input coordinates and dimensions of the final cropped image. It does so computing the center of the cropping area and then computing where the top-left coordinates would be."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/alessandrozonta/ComfyUI-CenterNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "alezonta"
DisplayName = "ComfyUI-CenterNode"
Icon = ""
